Bug 1486959 - Remove bogus assertion in ContentClient. r=nical

It's possible to trigger this assertion with asyncPaint = true and
bufferRotation != (0, 0). In this case though everything should work fine,
because we didn't start a new paint task, and we should be able to copy over
buffers. So we should be able to remove this assertion.

--HG--
extra : amend_source : d4cb9eddf48e08446469d2e1891f0e9ed3bb85d0